--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="box">
-      <main> <!--Contenido principal de web-->
+      <main>
         <div class="first">
           <img src="img\pika.png" class="my-logo" alt="Un pikachu">
           <h1 class="name">Cardinal</h1>
@@ -29,11 +29,11 @@
 
         <div class="projects">
           <h1>Projects:</h1>
-          <ul> <!--Lista no ordenada; ol para lista ordenada-->
+          <ul>
             <li>
               <h3>R6 tracker</h3>
-              <img src="img/R6Tracker.png" class="project-img" alt="R6 tracker">
-              <p>R6 tracker es una aplicación que con ingenieria inversa detecta tus estadisticas en el juego Rainbow Six Siege cuando juegas offline con amigos. Su uso está destinado para TinoRed, una intranet de Cuba</p>
+              <a href ="https://github.com/CardinalSys/R6TrackerV2" target="_blank" rel="noopener noreferrer"> <img src="img/R6Tracker.png" class="project-img" alt="R6 tracker"></a>
+              <p>R6 Tracker, designed for TinoRed (Cuba intranet) is a program for check your statistics in Rainbow Six Siege LAN mode by reading the game's RAM in real time.</p>
             </li>
 
             <li>
