--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
             <li>
             <h3>Novel City</h3>
-            <img src="img/CityNovel.png" class="project-img" alt=CityNovel>
-            <p>Web para publicar y leer novelas ligeras, con muchas características tanto para los lectores como los escritores, desde logros y concursos hasta una pequeña sorpresa interactiva que vendrá próximamente</p>
+            <a href ="https://github.com/CardinalSys/NautaManager" target="_blank" rel="noopener noreferrer"> <img src="img/NautaManager.png" class="project-img" alt=NautaManager>
+            <p>Nauta Manager is a program to connect to Nauta Home without using the web, with a tool to schedule the disconnection, a connection quality checker and an option to disable the automatic disconnection every 12 hours.</p>
             </li>
           </ul>
         </div>
