--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
             <li>
             <h3>Novel City</h3>
-            <a href ="https://github.com/CardinalSys/NautaManager" target="_blank" rel="noopener noreferrer"> <img src="img/NautaManager.png" class="project-img" alt=NautaManager>
+            <a href ="https://github.com/CardinalSys/NautaManager" target="_blank" rel="noopener noreferrer"> <img src="img/NautaManager.png" class="project-img" alt=NautaManager></a>
             <p>Nauta Manager is a program to connect to Nauta Home without using the web, with a tool to schedule the disconnection, a connection quality checker and an option to disable the automatic disconnection every 12 hours.</p>
             </li>
           </ul>
